--- a/style.scss
+++ b/style.scss
@@ -62,6 +62,12 @@ section.billboard{
     position:relative;
     bottom:20px;
     color:rgb(250, 250, 250);
+    .hi-bubble{
+        position:absolute;
+        width:10%;
+        top:23%;
+        left:12%;
+    }
     
     .billboard-content{
 
@@ -388,6 +394,10 @@ footer{
     }
     section.billboard{
         bottom:29px;
+        .hi-bubble{
+            top:15%;
+            left:23%;
+        }
         .billboard-content{
             position:relative;
             bottom:20vw;
@@ -528,7 +538,10 @@ footer{
     }
 
     section.billboard{
-       
+        .hi-bubble{
+            width:7%;
+            left:26.5%;
+        }
         .billboard-content{
             display:none;
         }
@@ -560,11 +573,11 @@ footer{
         }
         .computer-illu{
             opacity:0.8;
-            transform:rotate3d(0,1,0,190deg);
+            //transform:rotate3d(0,1,0,190deg);
             width:40%;
             position:absolute;
-            left:5%;
-            bottom:-140%;
+            left:60%;
+            bottom:-200%;
             z-index:0;
         }
     }
@@ -605,7 +618,7 @@ footer{
         h1{
             width:20%;
             position:relative;
-            left:10%;
+            left:13%;
         }
         p{
           margin-top:-9.9%;
@@ -620,7 +633,7 @@ footer{
     .second-divider{
         padding-top:12%;
         padding-right:6%;
-        margin-left:5%; 
+        margin-left:6%; 
     }
 
     section.brief{
@@ -647,34 +660,49 @@ footer{
         h1{
             border-top:2px solid black;
             border-bottom:2px solid black;
-            width:12%;
-            margin-left:39%;
+            width:10%;
+            margin-left:42%;
             padding-left:6.5%;
-            padding-right:0%;
+            padding-right:1%;
             font-family: 'Montserrat', sans-serif; 
         }
         h2,.tech{
             font-family: 'Montserrat', sans-serif;
-            margin-left:20%;
+            margin-left:25%;
         }
         .tech{
             display:grid;
             grid-template-columns:20% 20% 20% 20%;
             div{
                 margin-top:7vh;
+                
                 div{
-                    margin-left:13%;
+                    
+                    margin-left:14%;
+                }
+                &:nth-child(4), &:nth-child(5), &:nth-child(7), &:nth-child(8){
+                   
+                   div{
+                       margin-left:5%;
+                   }
+                }
+                &:nth-child(6){
+                    div{
+                        position:relative;
+                        top:2vh;
+                        margin:20%;
+                    }
                 }
                 &:last-child{
                     img{
                         width:80%;
                         position:relative;
-                        bottom:2.3vw;
+                        bottom:1.8vw;
                         right:16%;
                     }
                     div{
                         position:relative;
-                        bottom:4.1vw;
+                        bottom:3.3vw;
                     }
                 }
             }
@@ -686,11 +714,11 @@ footer{
         .projects-background{
             height:15vw;
             h1{
-                font-size:1.5rem;
+                font-size:1.7rem;
                 width:0px;
-                padding-left:5%;
-                padding-right:14%;
-                left:10%;
+                padding-left:7%;
+                padding-right:12%;
+                left:12%;
             }
         }
         nav{
@@ -714,11 +742,11 @@ footer{
         margin-top:5%;
         #contacts{
             position:relative;
-            left:12%;
+            left:13%;
             width:0;
             margin-bottom:-8%;
             padding-right:14%;
-            padding-left:5%;
+            padding-left:6%;
         }
         form{
             
@@ -744,17 +772,22 @@ footer{
             margin-right:2%;
             i{
                 margin-right:8.5%;
+                font-size:1.3rem;
+                
             }
             a{
-                margin-left:2%;
+                margin-left:2.5%;
                 position:relative;
-                bottom:5vw;
+                top:7vh;
+
+
             }
         }
         .social-media{
             justify-content: none;
             margin-left:43.5%;
-            margin-right:35%;
+            margin-right:37%;
+            margin-top:4%;
              
             img{
                 width:80%;
