--- a/style.scss
+++ b/style.scss
@@ -28,13 +28,14 @@ header{
     #mobile-menu{
        position:absolute;
        top:-2vw;
-       display:none;
        width:88%;
+       display:none;
        background-color:black;
        opacity:0.9;
        z-index:2;
        animation-name:slide-down;
        animation-duration:.3s;
+      
        @keyframes slide-down{
            from{
                top:-70vw;
@@ -45,14 +46,19 @@ header{
        }
        li{
            padding:5%;
-           margin-left:32%;
+           margin-left:29%;
        }
+      i{
+          position:relative;
+          bottom:32vh;
+      }
     }
     i{
       font-size:2.5rem;
       float:right;
       margin-right:5%;
     }
+    
 }
 section.billboard{
     background:url('assets/desktopBackground.jpg');
